<resources>
    <string name="app_name">LifeWheel</string>
    <string name="purpose">Визуализируй свою цель</string>
    <string name="purpose_name">Название задачи</string>
    <string name="add_text">Добавить описание</string>
    <string name="add_photo">Добавить фото</string>
    <string name="photo_content">Сделайте фото</string>
    <string name="percents">0</string>
    <string name="add_task">Добавить задачу</string>
    <string name="search">Поиск</string>
    <string name="notes">Заметки</string>
    <string name="new_note">Новая запись</string>
    <string name="text_note">Текст записи...</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to">Добро пожаловать в </string>
    <string name="lifewheel">LifeWheel</string>
    <string name="register">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="pasword_and_username">Введите имя пользователя и пароль</string>
    <string name="username_add">Введите имя пользователя</string>
    <string name="passwd_add">Введите пароль</string>
    <string name="password_length">Пароль должен быть больше 8 символов</string>
    <string name="wheel">Колесо</string>
    <string name="no_category">Без категории</string>
    <string name="add_purpose">Добавить цель</string>
    <string name="list_purposes">Список целей</string>
    <string name="name_purpose">Название цели</string>
    <string name="period_of_execution">Срок выполнения</string>
    <string name="long_text">Достижение этой цели улучшит сферу %1$s </string>
    <string name="little">Немного</string>
    <string name="medium">Средне</string>
    <string name="strong">Сильно</string>
    <string name="rating_purpose">Оценка цели</string>
    <string name="seekbar_rating">0.0</string>
    <string name="brightness_life">Яркость жизни</string>
    <string name="self_development">Саморазвитие</string>
    <string name="things">Вещи</string>
    <string name="family">Семья</string>
    <string name="medical">Здоровье</string>
    <string name="career">Карьера</string>
    <string name="money">Деньги</string>
    <string name="love">Отношения</string>
    <string name="zadat">Задать</string>
    <string name="delete_profile">Удалить профиль</string>
</resources>
